@@ -82,3 +82,11 @@
   <img 
        src="http://www.linuxdj.com/audio/lad/graphics/ladbanner_50.gif"
        alt="Linux Audio Developers Logo"></a>
+
+
+       <p>
+       <br>
+       <br>
+       <br>
+<font size="-1"><em>Image credits: trumpet <a
+href="http://www.flickr.com/photos/poagao">poagoa</a> (flickr.com)</em></font>
