@@ -3,6 +3,5 @@
  ("faq.html", _ ("FAQ")),
  ("automated-engraving", _ ("Essay")),
  ("pubs.html", _ ("Publications")),
- ("doneet.html", _ ("Donate")),
  ("thanks.html", _ ("Acknowledgements")),
 ]
