@@ -77,7 +77,25 @@
       </p>
     </td>
   </tr>
+  
+    
+  <tr>
 
+  <th class="news">
+  Support <br>
+  development
+    </th>
+  </tr>
+
+  <tr>
+  <td><p> Do you want to enjoy using LilyPond in the future? Then
+    support its development
+    </p>
+    <p class="teaser">
+    Read more about <a href="sponsor/">sponsoring</a>.</p>
+	</td>
+  </tr>
+  
 </table>
 
 <br>
